typescript/checker/tests/conformance/parser/ecmascript5/ParameterLists/parserParameterList11.ts.stderr
error: TS1047
 --> $DIR/tests/conformance/parser/ecmascript5/ParameterLists/parserParameterList11.ts:1:8
  |
1 | (...arg?) => 102;
  |        ^

